Thu Aug 16 07:42:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* intern.h (is_ruby_native_thread): removed since declared as an int
	  function in ruby.h already.

Thu Aug 16 07:40:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_rename): deleted code to get rid of a bug of
	  old Cygwin.

	* file.c (rb_file_truncate): added prototype of GetLastError()
	  on cygwin.  [ruby-dev:31239]

	* intern.h (is_ruby_native_thread): prototype.

	* missing/strftime.c (strftime): fix printf format and actual
	  arguments.

	* ext/Win32API/Win32API.c (Win32API_initialize): ditto.

	* ext/tk/tcltklib.c (ip_finalize): ditto.

	* ext/dl/ptr.c (rb_dlptr_inspect): ditto.  [ruby-dev:31268]

	* ext/dl/sym.c (rb_dlsym_inspect): ditto.

	* ext/socket/getnameinfo.c: include stdio.h always.

	* ext/win32ole/win32ole.c (ole_hresult2msg, folevariable_name,
	  folevariable_ole_type, folevariable_ole_type_detail,
	  folevariable_value, folemethod_visible): missing return value.

Thu Aug 16 07:32:13 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): make OBJS depend on RUBY_EXTCONF_H
	  only if extconf.h is created.

Thu Aug 16 07:29:33 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* {win32,wince,bcc32}/setup.mak (-version-): no RUBY_EXTERN magic.

Thu Aug 16 06:43:03 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (init_mkmf): should remove mkmf.log too.

Thu Aug 16 06:40:58 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_config.c (ossl_config_set_section): do not
	  initialize aggregations with dynamic values.  [ruby-talk:259306]

Thu Aug 16 06:39:19 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (get_backtrace): check the result more.
	  [ruby-dev:31261] [ruby-bugs-12398]

Thu Aug 16 06:32:25 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_lshift, rb_big_rshift): separated functions
	  to get rid of infinite recursion.  fixed calculation in edge
	  cases.  [ruby-dev:31244]
